--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>OCC CS Club</title>
 	</head>
-	<body style="background-color: 	#212121" >
+	<body >
 		<div id="root"></div>
 	</body>
 </html>
