--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Website created by OCC CS Club" />
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="manifest" href="/manifest.json" />
 		<title>OCC CS Club</title>
 	</head>
 	<body >
 		<div id="root"></div>
+		<script type="module" src="/src/index.jsx"></script>
 	</body>
 </html>
